--- a/Resources/views/Category/list.html.twig
+++ b/Resources/views/Category/list.html.twig
@@ -1,16 +1,18 @@
-<table class="forum_categories_list">
+<table class="table">
     <tr>
         <th>{{ 'forum.topic.title'|trans }}</th>
-        <th>{{ 'forum.topic.count'|trans }}</th>
-        <th>{{ 'forum.topic.last_post'|trans }}</th>
-        <th>{{ 'forum.topic.poster'|trans }}</th>
+        <th>{{ 'forum.topic.num_topics'|trans }}</th>
+        <th>{{ 'forum.topic.num_posts'|trans }}</th>
     </tr>
     {% for category in categories %}
         <tr>
             <td><a href="{{ forum_urlForCategory(category) }}">{{ category.name }}</a></td>
             <td>{{ category.numTopics }}</td>
-            <td>{{ category.numTopics }} ONLINE<br/></td>
-            <td>{{ category.numTopics }} ONLINE</td>
+            <td>{{ category.numPosts }}<br/></td>
         </tr>
     {% endfor %}
 </table>
+
+<div class="navigation">
+    {{ knp_pagination_render(categories) }}
+</div>
