--- a/Resources/views/Post/new.html.twig
+++ b/Resources/views/Post/new.html.twig
@@ -1,26 +1,26 @@
 {% extends 'DarlesForumBundle::layout.html.twig' %}
-{% block title %}New Reply{% endblock %}
+{% block title %}{{ 'forum.post.title_new_reply' }}{% endblock %}
 {% block content %}
-    <div class="forum  post_new">
+    <div class="forum post_new">
         <ul class="crumbs">
             <li><a href="{{ path('darles_forum_index') }} ">Forum</a></li>
             <li><a href="{{ forum_urlForCategory(topic.category) }}">{{ topic.category.name }}</a></li>
             <li><a href="{{ forum_urlForTopic(topic) }}">{{ topic.subject }}</a></li>
-            <li>New Reply</li>
+            <li>{{ 'forum.post.new_reply' }}</li>
         </ul>
         <div class="main">
-            <h2>New Reply</h2>
+            <h2>{{ 'forum.post.new_reply' }}</h2>
 
             <form action="{{ url('darles_forum_topic_post_create', { 'slug': topic.slug, 'categorySlug' : topic.category.slug }) }}"
                   method="post">
                 {{ form_widget(form) }}
                 <div>
-                    <button type="submit" name="reply">Add post</button>
+                    <button type="submit" name="reply">{{ 'forum.post.submit_button' }}</button>
                 </div>
             </form>
         </div>
         <div class="side">
-            <p><a href="{{ forum_urlForTopic(topic) }}">Back to the topic</a></p>
+            <p><a href="{{ forum_urlForTopic(topic) }}">{{ 'forum.post.back_button' }}</a></p>
         </div>
     </div>
 {% endblock %}
