--- a/Resources/views/Topic/show.html.twig
+++ b/Resources/views/Topic/show.html.twig
@@ -11,9 +11,11 @@
 
         <div class="main topic">
             <h2>{{ topic.subject }}</h2>
-            <a href="{{ forum_urlForTopicAtomFeed(topic) }}" title="Atom feed" class="feed atom">Atom feed</a>
             {% include 'DarlesForumBundle:Post:list.html.twig' with {'posts': posts} %}
-            {#{ pagerfanta(posts, 'default', {'proximity': 3}) }#}
+        </div>
+
+        <div class="navigation">
+            {{ knp_pagination_render(posts) }}
         </div>
 
         <div class="side menu">
@@ -21,4 +23,5 @@
         </div>
 
     </div>
+
 {% endblock %}
